--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,25 +1,12 @@
-version: '3.3'
+version: '2.4'
 services:
   db:
-    image: mysql:5.7
-    restart: always
-    environment:
-      MYSQL_DATABASE: 'db'
-      # So you don't have to use root, but you can if you like
-      MYSQL_USER: 'user'
-      # You can use whatever password you like
-      MYSQL_PASSWORD: 'password'
-      # Password for root access
-      MYSQL_ROOT_PASSWORD: 'password'
+    image: datajoint/mysql:5.7
     ports:
-      # <Port exposed> : < MySQL Port running inside container>
-      - '3306:3306'
-    expose:
-      # Opens port 3306 on the container
-      - '3306'
-      # Where our data will be persisted
+      - "3306:3306"
+    environment:
+      - MYSQL_ROOT_PASSWORD=simple
+      # - DATAJOINT_DATABASE_CONFIG_MONITOR=FALSE
     volumes:
-      - my-db:/var/lib/mysql
-# Names our volume
-volumes:
-  my-db:
+      - ./data:/var/lib/mysql
+      # - ./my.cnf:/etc/mysql/my.cnf
