--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url = jdbc:mysql://localhost:3306/db
-spring.datasource.username = user
-spring.datasource.password = password
+spring.datasource.username = root
+spring.datasource.password = simple
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.data.jpa.repositories.enabled=true
  
@@ -23,9 +23,7 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
  
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-
-
-logging.level.org.springframework.web=INFO
-logging.level.guru.springframework.controllers=DEBUG
-logging.level.org.hibernate=ERROR
-logging.file=logs/spring-boot-logging.log
+#logging.level.org.springframework.web=INFO
+#logging.level.guru.springframework.controllers=DEBUG
+#logging.level.org.hibernate=ERROR
+#logging.file=logs/spring-boot-logging.log
