adding test cases

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.validationQuery = SELECT 1
  
 # Show or not log for each sql query
 spring.jpa.show-sql = true
- 
+ server.port=8080
 # Hibernate ddl auto (create, create-drop, update)
 #set to create-drop instead of update
 spring.jpa.hibernate.ddl-auto = update
